--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 client_id = '2229ed7d3fdd41f19cdefe48aac30248'
 client_secret = '24f23bc5c6f14245bc3dbb1768900012'
-redirect_uri = 'https://groovegenie.streamlit.app/'
+redirect_uri = 'http://localhost:8080'
